--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "emailjs-com": "^3.2.0",
     "fslightbox-react": "^1.7.6",
     "isotope-layout": "^3.0.6",
+    "lightbox.js-react": "^1.4.6",
     "lightbox2": "^2.11.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
