--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-to-print": "^3.0.5",
     "react-waypoint": "^10.3.0",
     "remixicon": "^3.5.0",
     "vercel": "^31.2.2",
